<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_tenant">Tickets</string>
    <string name="title_activity_add_tickets">Create Ticket</string>
    <string name="app_name">Renter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loginBtn">Login</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_tenant_sign_up">TenantSignUpActivity</string>
    <string name="mVerifyEmail">Verify Email</string>
    <string name="signUpSwitch_on">Tenant</string>
    <string name="signUpSwitch_Community">Community</string>
    <string name="communityName_hint">Community Name</string>
    <string name="contactNumber_hint">Contact Number</string>
    <string name="cPassword_hint">Confirmation Password</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="zipCode">Zip Code</string>
    <string name="postalAddress">Postal Address</string>
    <string name="title_activity_community_main">CommunityMainActivity</string>
    <string name="action_addFlat">Add Flat</string>
    <string name="action_deleteFlat">Remove Flat</string>
    <string name="action_deleteTenant">Delete Tenant Info</string>
    <string name="addFlatButton">Add Flat</string>
    <string name="flatNumberhint">Flat Number</string>
    <string name="tenantNamehint">Tenant Name</string>
    <string name="tenantMailIdhint">Tenant MailId</string>
    <string name="tenantMailIdTitleTextView">Tenant Mail Id</string>
	<string name="tenantNameTitleTextView">Tenant Name</string>
	<string name="flatNumberTitleTextView">Flat Number</string>
	<string name="mFlatNumberTitleTextView">Flat Number</string>
	<string name="mTenantNameTitle">Name</string>
	<string name="mTenantPassword">Password</string>
	<string name="mTenantCPassword">Confirmation Password</string>
	<string name="mTenantContactNumber">Contact Number</string>
	<string name="mTenantSingUpButton">Sign Up</string>	
	<string name="mCommunityNameTitle">Community Name</string>
	<string name="mNotificationMainTitle">Notifications</string>
	<string name="mTicketMainTitle">All Tickets</string>
	<string name="mNotificationSendString">Send a notification to: </string>
	<string name="mNotificationRadio0">All tenants</string>
	<string name="mNotificationRadio1">Select recipients</string>
	<string name="mSendButton">Send</string>
	<string name="mTicketTitleHint">Add a title</string>
	<string name="mTicketDescriptionHint">Add a description</string>
	<string name="mTicketPriorityMainText">Priority</string>
	<string name="mTicketPriorityLow">Low</string>
	<string name="mTicketPriorityMedium">Medium</string>
	<string name="mTicketPriorityHigh">High</string>
	<string name="mTicketStatusMainText">Status</string>
	<string name="mTicketStatusOpen">Open</string>
	<string name="mTicketStatusInProgress">In Progress</string>
	<string name="mTicketStatusClosed">Closed</string>
	<string name="mTicketSubmitButtonEdit">Save changes</string>
	<string name="mTicketSubmitButtonAdd">Raise Ticket</string>
	<string name="mNotificationHint">Add a notification</string>
	<string name="mNotificationRecipientsTitle">The following flats will receive the notification: </string>
	<string name="mFacilityName">Facility Name</string>
	<string name="mFacilityTitle">Facilities</string>
	<string name="mVacancyTitle">Vacancies</string>
	<string name="mFacilityTotal">Total</string>
	<string name="mFacilityOccupied">Occupied</string>
	<string name="pm_wrongAmountFomat">Entered amount is not valid</string>
	<string name="mSettingsHeading">Logged in as</string>
	<string name="mSettingsNameTitle">Name</string>
	<string name="mSettingsContactNumberTitle">Contact Number</string>
	<string name="mSettingsDefaultCurrencyTitle">Default Currency</string>
	<string name="mSettingsSaveButtonTitle">Save Changes</string>
	
	
    <string-array name="CommunityDrawerOptions_array">
        <item>Tickets</item>
        <item>Flats</item>
        <item>Facilities</item>
        <item>Notifications</item>
        <item>Settings</item>
        <item>Sign Out</item>
    </string-array>

    <string-array name="TenantDrawerOptions_array">
        <item>Tickets</item>
        <item>Facilities</item>
        <item>Payments</item>
        <item>Discussion Forum</item>
        <item>Settings</item>
        <item>Add Friends</item>
        <item>Sign Out</item>
    </string-array>
    
    <string-array name="Currecy_array">
        <item>USD</item>
        <item>EUR</item>
        <item>INR</item>
        <item>AED</item>
        <item>AFN</item>
        <item>ANG</item>
    </string-array>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_tickets">TicketsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Credit Card -->
    <string name="pm_cc_number_label">Credit Card</string>
    <string name="pm_cc_number_hint">Card Number</string>
    <string name="pm_cc_expdate_label">Expiration Date</string>
    <string name="pm_cc_date_hint">MM/YY</string>
    <string name="pm_cc_date_separator">/</string>
    <string name="pm_cc_verification_label">Verification number</string>
    <string name="pm_cc_verification_hint">CVC</string>
    <string name="pm_cc_holder_name_hint">Card holder</string>
    <string name="pm_cc_holder_name_label">Card holder</string>
    <string name="pm_cc_trigger_btn_default">Pay</string>
    
    <string name="pm_emptyMSG">Field cannot be empty</string>
<<<<<<< Updated upstream
    
    <string name="service_name">NotificationAccessibilityService</string>
=======
    <string name="title_activity_add_friend">AddFriendActivity</string>
    
>>>>>>> Stashed changes
</resources>