<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.androidprojects.suresh.renter.CommunitySignUpActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mCommunityName"
        android:hint="@string/communityName_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/mCommunityEmail"
        android:layout_below="@+id/mCommunityName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/email_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/mContactNumber"
        android:layout_below="@+id/mCommunityEmail"
        android:hint="@string/contactNumber_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/mPassword"
        android:layout_below="@+id/mContactNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/password_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/mCPassword"
        android:layout_below="@+id/mPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/cPassword_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/mPostalAddress"
        android:layout_below="@+id/mCPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/postalAddress"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/mCity"
        android:layout_below="@+id/mPostalAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/city"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mState"
        android:layout_below="@+id/mCity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/state"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mCountry"
        android:layout_below="@+id/mState"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/country"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/mZipCode"
        android:layout_below="@+id/mCountry"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/zipCode"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUpBtn"
        android:id="@+id/communitySignUpBtn"
        android:layout_below="@+id/mZipCode"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
