<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.community.renter.FlatFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/flatNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:hint="@string/flatNumberhint">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/tenantNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
			android:hint="@string/tenantNamehint" />

        <EditText
            android:id="@+id/tenantMailIdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" 
            android:hint="@string/tenantMailIdhint" />

        <Button
            android:id="@+id/addFlatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addFlatButton" />

    </LinearLayout>

</FrameLayout>
