<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.androidprojects.suresh.renter.TenantSignUpActivity" >

    <EditText
        android:id="@+id/mTenantEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/mVerifyEmailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mTenantEmail"
        android:text="@string/mVerifyEmail" />

    <TextView
        android:id="@+id/mCommunityNameTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mVerifyEmailButton"
        android:layout_below="@+id/mVerifyEmailButton"
        android:layout_marginTop="27dp"
        android:text="@string/mCommunityNameTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/mTenantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mTenantNameTitle"
        android:layout_alignBottom="@+id/mTenantNameTitle"
        android:layout_alignLeft="@+id/mFlatNumberTextView"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/mTenantSingUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mCommunityNameTitleTextView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="38dp"
        android:text="@string/mTenantSingUpButton" />

    <EditText
        android:id="@+id/mTenantContactNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mTenantSingUpButton"
        android:layout_alignLeft="@+id/mTenantSingUpButton"
        android:layout_marginBottom="54dp"
        android:ems="10"
        android:hint="@string/mTenantContactNumber"
        android:inputType="phone" />

    <EditText
        android:id="@+id/mTenantCPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mTenantContactNumber"
        android:layout_alignLeft="@+id/mTenantContactNumber"
        android:ems="10"
        android:hint="@string/mTenantCPassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/mTenantPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mTenantCPassword"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/mTenantPassword"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/mCommunityNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mCommunityNameTitleTextView"
        android:layout_alignBottom="@+id/mCommunityNameTitleTextView"
        android:layout_marginLeft="19dp"
        android:layout_toRightOf="@+id/mCommunityNameTitleTextView"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/mTenantNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mTenantPassword"
        android:layout_below="@+id/mFlatNumberTitleTextView"
        android:text="@string/mTenantNameTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/mFlatNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mFlatNumberTitleTextView"
        android:layout_alignBottom="@+id/mFlatNumberTitleTextView"
        android:layout_alignLeft="@+id/mCommunityNameTextView"
        android:layout_marginLeft="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/mFlatNumberTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mTenantNameTitle"
        android:layout_below="@+id/mCommunityNameTitleTextView"
        android:text="@string/mFlatNumberTitleTextView"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>