<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutSettingsMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.community.renter.SettingsFragment" >

    <LinearLayout
        android:id="@+id/LayoutSettingsDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewSettingsLoggedInName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mSettingsHeading"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewSettingsDisplayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutEditDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewSettingsEditName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mSettingsNameTitle" />

        <EditText
            android:id="@+id/editTextSettingsEditName"
            android:padding="6dp"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_border"
            android:ems="10" >

        </EditText>

        <TextView
            android:id="@+id/textViewSettingsEditPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/mSettingsContactNumberTitle" />

        <EditText
            android:id="@+id/editTextSettingsEditPhoneNumber"
            android:padding="6dp"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:inputType="phone"
            android:background="@drawable/input_border"
            android:ems="10" />
<!--  
        <TextView
            android:id="@+id/textViewSettingsEditCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/mSettingsDefaultCurrencyTitle" />

        <Spinner
            android:id="@+id/spinnerSettingsEditCurrency"
            android:layout_width="140dp"
            android:layout_height="wrap_content" />
-->
    </LinearLayout>

    <Button
        android:id="@+id/buttonSettingsSaveChanges"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/mSettingsSaveButtonTitle"
        android:textSize="13sp" />

</LinearLayout>
